UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DPIBillingDetails__c/ftr_DPIBillingDetails__c.object-meta.xml
<CustomObject>
    <label>ftr_DPIBillingDetails</label>
    <nameField>
        <label>ftr_DPIBillingDetails</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ftr_DPIBillingDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>