UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DPIBillingDetails__c/fields/BillingCycle__c.field-meta.xml
<CustomField>
    <fullName>BillingCycle__c</fullName>
    <label>BillingCycle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>