UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DPIBillingDetails__c/fields/BillingTelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingTelephoneNumber__c</fullName>
    <label>BillingTelephoneNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>