UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DPIBillingDetails__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <label>﻿Customer_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>