UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DPIBillingDetails__c/fields/Env__c.field-meta.xml
<CustomField>
    <fullName>Env__c</fullName>
    <label>Enviornment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>