UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DPIBillingDetails__c/fields/GlobalAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>GlobalAccountNumber__c</fullName>
    <label>GlobalAccountNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>