UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DPIBillingDetails__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>BTN-WTN</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>