UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DPIBillingDetails__c/fields/MasterSummaryNumber__c.field-meta.xml
<CustomField>
    <fullName>MasterSummaryNumber__c</fullName>
    <label>MasterSummaryNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>