UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_DPIBillingDetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Number__c</columns>
    <columns>BillingTelephoneNumber__c</columns>
    <columns>BillingCycle__c</columns>
    <columns>MasterSummaryNumber__c</columns>
    <columns>GlobalAccountNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>